Fix-Global-spacing: Done

--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,9 @@ text-align: center;
 
 /*Templates*/
 /* button temp*/
+section{
+  margin: 80px 0px;
+}
 button{
 margin: 50px;
 padding: 10px 30px;
@@ -60,6 +63,7 @@ font-size: 16px;
 line-height: 24px;
 letter-spacing: 0.2px;
 padding: 20px;
+
 
 }
 
@@ -131,7 +135,7 @@ justify-content: space-evenly;
  }
 
 .header-btn button{
-  margin: auto;
+  margin: 40px 0px;
 }
 #free-btn{
 border-color: #4452FE;
@@ -165,6 +169,12 @@ position: relative;
 background-image: linear-gradient(#0000 ,black );
 }
 
+.header h1{
+  padding-bottom: 0px;
+}
+.header{
+margin: 0px auto;
+}
 
 /*features*/
 .features-content-frame{
@@ -182,6 +192,7 @@ bottom: 0px;
 .features .content-row{
 width: fit-content;
 height: fit-content;
+padding: 20px;
 }
 .features .content-block{
 display: block;
@@ -286,6 +297,7 @@ padding: 20px 20px 0px 20px;
 /*Cta*/
 .cta{
   padding: 50px;
+  padding: 80px;
 }
 .cta-content {
   display: inline-flex;
